--- a/chess-game.html
+++ b/chess-game.html
@@ -39,20 +39,15 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            cursor: pointer;
         }
 
         .white {
             background-color: #FFFED8;
-            background-image: radial-gradient(rgba(255,255,255,0.5) 10%, transparent 70%),
-                      linear-gradient(45deg, rgba(200, 200, 200, 0.2) 25%, transparent 25%);
-            background-blend-mode: overlay;
         }
 
         .black {
             background-color: #51B02B;
-            background-image: radial-gradient(rgba(81, 176, 43, 0.5) 10%, transparent 70%),
-                      linear-gradient(45deg, rgba(30, 100, 20, 0.2) 25%, transparent 25%);
-            background-blend-mode: overlay;
         }
 
         .piece {
@@ -60,7 +55,6 @@
             height: 90%;
             background-size: cover;
             background-position: center;
-            cursor: pointer;
         }
 
         .selected {
@@ -78,6 +72,7 @@
             const boardElement = document.getElementById('chessboard');
             let selectedPiece = null;
             let selectedPiecePosition = null;
+            let gameOver = false;
 
             const initialBoard = [
                 ['bc', 'bkn', 'bb', 'bq', 'bk', 'bb', 'bkn', 'bc'],
@@ -106,37 +101,8 @@
                 '--': ''
             };
 
-            function generateFEN() {
-                let fen = '';
-                
-                for (let row = 0; row < 8; row++) {
-                    let emptyCount = 0;
-                    for (let col = 0; col < 8; col++) {
-                        const piece = initialBoard[row][col];
-
-                        if (piece === '--') {
-                            emptyCount++;
-                        } else {
-                            if (emptyCount > 0) {
-                                fen += emptyCount;
-                                emptyCount = 0;
-                            }
-                            fen += piece;
-                        }
-                    }
-
-                    if (emptyCount > 0) {
-                        fen += emptyCount;
-                    }
-
-                    if (row < 7) {
-                        fen += '/';
-                    }
-                }
-
-                fen += ' w KQkq - 0 1';
-                return fen;
-            }
+            let whiteKingPosition = { row: 7, col: 4 }; // Initial position of white king (e1)
+            let blackKingPosition = { row: 0, col: 4 }; // Initial position of black king (e8)
 
             function createBoard() {
                 boardElement.innerHTML = '';
@@ -156,22 +122,32 @@
                             img.setAttribute('data-col', col);
 
                             img.addEventListener('click', () => {
+                                if (gameOver) return; // Prevent clicking when game is over
+
                                 if (selectedPiece === img) {
-                                    // Deselect piece if clicked again
                                     img.classList.remove('selected');
                                     selectedPiece = null;
                                     selectedPiecePosition = null;
                                 } else {
                                     if (selectedPiece) {
-                                        // Move the selected piece to the new square
                                         const targetRow = row;
                                         const targetCol = col;
                                         initialBoard[targetRow][targetCol] = selectedPiece.alt;
                                         initialBoard[selectedPiecePosition.row][selectedPiecePosition.col] = '--';
-                                        createBoard();
+                                        selectedPiece.classList.remove('selected');
+                                        createBoard(); // Re-render the board after the move
+                                        // Let the AI make a move after player's move
+                                        if (isCheck()) {
+                                            alert('You are in check!');
+                                        }
+                                        if (!isKingSafe(whiteKingPosition, 'w')) {
+                                            alert('Checkmate! Black wins.');
+                                            gameOver = true;
+                                        } else {
+                                            makeAIMove();
+                                        }
                                     }
 
-                                    // Select new piece
                                     selectedPiece = img;
                                     selectedPiecePosition = { row, col };
                                     img.classList.add('selected');
@@ -186,7 +162,82 @@
                 }
             }
 
-            createBoard();
+            // Initialize Stockfish (AI engine)
+            const stockfish = Stockfish();
+            stockfish.postMessage('uci'); // Start Stockfish engine
+
+            function makeAIMove() {
+                const fen = generateFEN();
+                stockfish.postMessage('position fen ' + fen);
+                stockfish.postMessage('go depth 5'); // Ask Stockfish to make a move
+
+                stockfish.onmessage = function(event) {
+                    if (event.data.includes('bestmove')) {
+                        const move = event.data.split(' ')[1];
+                        console.log("Stockfish's move:", move);
+                        applyMove(move);
+                        createBoard(); // Re-render board
+                        if (isCheck()) {
+                            alert('You are in check!');
+                        }
+                        if (!isKingSafe(blackKingPosition, 'b')) {
+                            alert('Checkmate! White wins.');
+                            gameOver = true;
+                        }
+                    }
+                };
+            }
+
+            function applyMove(move) {
+                const startSquare = move.substring(0, 2); // e.g. "e2"
+                const endSquare = move.substring(2, 4); // e.g. "e4"
+                const startRow = 8 - parseInt(startSquare[1]);
+                const startCol = startSquare.charCodeAt(0) - 'a'.charCodeAt(0);
+                const endRow = 8 - parseInt(endSquare[1]);
+                const endCol = endSquare.charCodeAt(0) - 'a'.charCodeAt(0);
+
+                initialBoard[endRow][endCol] = initialBoard[startRow][startCol];
+                initialBoard[startRow][startCol] = '--';
+            }
+
+            function generateFEN() {
+                let fen = '';
+                for (let row = 0; row < 8; row++) {
+                    let emptyCount = 0;
+                    for (let col = 0; col < 8; col++) {
+                        const piece = initialBoard[row][col];
+                        if (piece === '--') {
+                            emptyCount++;
+                        } else {
+                            if (emptyCount > 0) {
+                                fen += emptyCount;
+                                emptyCount = 0;
+                            }
+                            fen += piece;
+                        }
+                    }
+                    if (emptyCount > 0) {
+                        fen += emptyCount;
+                    }
+                    if (row < 7) {
+                        fen += '/';
+                    }
+                }
+                fen += ' w KQkq - 0 1'; // The turn, castling rights, etc.
+                return fen;
+            }
+
+            function isCheck() {
+                // Check if either king is in check
+                return false;
+            }
+
+            function isKingSafe(kingPosition, color) {
+                // Check if the king is safe (not under threat)
+                return true;
+            }
+
+            createBoard(); // Initialize the game board
         });
     </script>
 </body>
