--- a/chess-game.html
+++ b/chess-game.html
@@ -39,7 +39,6 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            cursor: pointer;
         }
 
         .white {
@@ -55,10 +54,11 @@
             height: 90%;
             background-size: cover;
             background-position: center;
+            cursor: pointer;
         }
 
-        .selected {
-            border: 2px solid #FFFBF0;
+        .highlight {
+            background-color: rgba(255, 0, 0, 0.4);
         }
     </style>
 </head>
@@ -66,13 +66,11 @@
     <div class="chess-container">
         <div id="chessboard" class="chessboard"></div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stockfish/11.0.0/stockfish.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const boardElement = document.getElementById('chessboard');
-            let selectedPiece = null;
-            let selectedPiecePosition = null;
-            let gameOver = false;
 
             const initialBoard = [
                 ['bc', 'bkn', 'bb', 'bq', 'bk', 'bb', 'bkn', 'bc'],
@@ -101,8 +99,38 @@
                 '--': ''
             };
 
-            let whiteKingPosition = { row: 7, col: 4 }; // Initial position of white king (e1)
-            let blackKingPosition = { row: 0, col: 4 }; // Initial position of black king (e8)
+            let selectedPiece = null;
+            let validMoves = [];
+
+            function generateFEN() {
+                let fen = '';
+                for (let row = 0; row < 8; row++) {
+                    let emptyCount = 0;
+                    for (let col = 0; col < 8; col++) {
+                        const piece = initialBoard[row][col];
+
+                        if (piece === '--') {
+                            emptyCount++;
+                        } else {
+                            if (emptyCount > 0) {
+                                fen += emptyCount;
+                                emptyCount = 0;
+                            }
+                            fen += piece;
+                        }
+                    }
+
+                    if (emptyCount > 0) {
+                        fen += emptyCount;
+                    }
+
+                    if (row < 7) {
+                        fen += '/';
+                    }
+                }
+                fen += ' w KQkq - 0 1';  // Example for the starting position
+                return fen;
+            }
 
             function createBoard() {
                 boardElement.innerHTML = '';
@@ -118,42 +146,9 @@
                             img.src = pieceImages[piece];
                             img.alt = piece;
                             img.classList.add('piece');
-                            img.setAttribute('data-row', row);
-                            img.setAttribute('data-col', col);
-
-                            img.addEventListener('click', () => {
-                                if (gameOver) return; // Prevent clicking when game is over
-
-                                if (selectedPiece === img) {
-                                    img.classList.remove('selected');
-                                    selectedPiece = null;
-                                    selectedPiecePosition = null;
-                                } else {
-                                    if (selectedPiece) {
-                                        const targetRow = row;
-                                        const targetCol = col;
-                                        initialBoard[targetRow][targetCol] = selectedPiece.alt;
-                                        initialBoard[selectedPiecePosition.row][selectedPiecePosition.col] = '--';
-                                        selectedPiece.classList.remove('selected');
-                                        createBoard(); // Re-render the board after the move
-                                        // Let the AI make a move after player's move
-                                        if (isCheck()) {
-                                            alert('You are in check!');
-                                        }
-                                        if (!isKingSafe(whiteKingPosition, 'w')) {
-                                            alert('Checkmate! Black wins.');
-                                            gameOver = true;
-                                        } else {
-                                            makeAIMove();
-                                        }
-                                    }
-
-                                    selectedPiece = img;
-                                    selectedPiecePosition = { row, col };
-                                    img.classList.add('selected');
-                                }
-                            });
-
+                            img.dataset.row = row;
+                            img.dataset.col = col;
+                            img.addEventListener('click', selectPiece);
                             square.appendChild(img);
                         }
 
@@ -162,82 +157,145 @@
                 }
             }
 
-            // Initialize Stockfish (AI engine)
-            const stockfish = Stockfish();
-            stockfish.postMessage('uci'); // Start Stockfish engine
+            function selectPiece(event) {
+                const img = event.target;
+                const row = parseInt(img.dataset.row);
+                const col = parseInt(img.dataset.col);
+                const piece = initialBoard[row][col];
 
-            function makeAIMove() {
-                const fen = generateFEN();
-                stockfish.postMessage('position fen ' + fen);
-                stockfish.postMessage('go depth 5'); // Ask Stockfish to make a move
-
-                stockfish.onmessage = function(event) {
-                    if (event.data.includes('bestmove')) {
-                        const move = event.data.split(' ')[1];
-                        console.log("Stockfish's move:", move);
-                        applyMove(move);
-                        createBoard(); // Re-render board
-                        if (isCheck()) {
-                            alert('You are in check!');
-                        }
-                        if (!isKingSafe(blackKingPosition, 'b')) {
-                            alert('Checkmate! White wins.');
-                            gameOver = true;
-                        }
-                    }
-                };
-            }
-
-            function applyMove(move) {
-                const startSquare = move.substring(0, 2); // e.g. "e2"
-                const endSquare = move.substring(2, 4); // e.g. "e4"
-                const startRow = 8 - parseInt(startSquare[1]);
-                const startCol = startSquare.charCodeAt(0) - 'a'.charCodeAt(0);
-                const endRow = 8 - parseInt(endSquare[1]);
-                const endCol = endSquare.charCodeAt(0) - 'a'.charCodeAt(0);
-
-                initialBoard[endRow][endCol] = initialBoard[startRow][startCol];
-                initialBoard[startRow][startCol] = '--';
-            }
-
-            function generateFEN() {
-                let fen = '';
-                for (let row = 0; row < 8; row++) {
-                    let emptyCount = 0;
-                    for (let col = 0; col < 8; col++) {
-                        const piece = initialBoard[row][col];
-                        if (piece === '--') {
-                            emptyCount++;
-                        } else {
-                            if (emptyCount > 0) {
-                                fen += emptyCount;
-                                emptyCount = 0;
-                            }
-                            fen += piece;
-                        }
-                    }
-                    if (emptyCount > 0) {
-                        fen += emptyCount;
-                    }
-                    if (row < 7) {
-                        fen += '/';
-                    }
+                if (selectedPiece) {
+                    movePiece(row, col);
+                } else {
+                    highlightValidMoves(row, col);
                 }
-                fen += ' w KQkq - 0 1'; // The turn, castling rights, etc.
-                return fen;
             }
 
-            function isCheck() {
-                // Check if either king is in check
-                return false;
+            function highlightValidMoves(row, col) {
+                // Clear previous highlights
+                validMoves = [];
+                const piece = initialBoard[row][col];
+
+                if (piece === '--') return; // Don't allow selection of empty squares
+
+                // Get valid moves for the piece
+                validMoves = getValidMoves(row, col, piece);
+
+                // Highlight valid moves
+                validMoves.forEach(move => {
+                    const square = boardElement.children[move.row * 8 + move.col];
+                    square.classList.add('highlight');
+                });
+                selectedPiece = { row, col };
             }
 
-            function isKingSafe(kingPosition, color) {
-                // Check if the king is safe (not under threat)
-                return true;
+            function getValidMoves(row, col, piece) {
+                const moves = [];
+                switch (piece[1]) {
+                    case 'p':  // Pawn
+                        const direction = piece[0] === 'w' ? -1 : 1;
+                        if (initialBoard[row + direction] && initialBoard[row + direction][col] === '--') {
+                            moves.push({ row: row + direction, col });
+                        }
+                        break;
+                    case 'r':  // Rook
+                        moves.push(...getStraightLineMoves(row, col));
+                        break;
+                    case 'n':  // Knight
+                        moves.push(...getKnightMoves(row, col));
+                        break;
+                    case 'b':  // Bishop
+                        moves.push(...getDiagonalMoves(row, col));
+                        break;
+                    case 'q':  // Queen
+                        moves.push(...getStraightLineMoves(row, col));
+                        moves.push(...getDiagonalMoves(row, col));
+                        break;
+                    case 'k':  // King
+                        moves.push(...getKingMoves(row, col));
+                        break;
+                }
+                return moves;
             }
 
-            createBoard(); // Initialize the game board
+            function getStraightLineMoves(row, col) {
+                const directions = [
+                    { r: 1, c: 0 }, { r: -1, c: 0 }, { r: 0, c: 1 }, { r: 0, c: -1 }
+                ];
+                return directions.flatMap(d => {
+                    const moves = [];
+                    let r = row + d.r;
+                    let c = col + d.c;
+                    while (r >= 0 && r < 8 && c >= 0 && c < 8) {
+                        if (initialBoard[r][c] === '--') {
+                            moves.push({ row: r, col: c });
+                        } else {
+                            break;
+                        }
+                        r += d.r;
+                        c += d.c;
+                    }
+                    return moves;
+                });
+            }
+
+            function getDiagonalMoves(row, col) {
+                const directions = [
+                    { r: 1, c: 1 }, { r: 1, c: -1 }, { r: -1, c: 1 }, { r: -1, c: -1 }
+                ];
+                return directions.flatMap(d => {
+                    const moves = [];
+                    let r = row + d.r;
+                    let c = col + d.c;
+                    while (r >= 0 && r < 8 && c >= 0 && c < 8) {
+                        if (initialBoard[r][c] === '--') {
+                            moves.push({ row: r, col: c });
+                        } else {
+                            break;
+                        }
+                        r += d.r;
+                        c += d.c;
+                    }
+                    return moves;
+                });
+            }
+
+            function getKnightMoves(row, col) {
+                const knightMoves = [
+                    { r: 2, c: 1 }, { r: 2, c: -1 }, { r: -2, c: 1 }, { r: -2, c: -1 },
+                    { r: 1, c: 2 }, { r: 1, c: -2 }, { r: -1, c: 2 }, { r: -1, c: -2 }
+                ];
+                return knightMoves.map(d => ({ row: row + d.r, col: col + d.c }))
+                    .filter(move => move.row >= 0 && move.row < 8 && move.col >= 0 && move.col < 8);
+            }
+
+            function getKingMoves(row, col) {
+                const kingMoves = [
+                    { r: 1, c: 0 }, { r: -1, c: 0 }, { r: 0, c: 1 }, { r: 0, c: -1 },
+                    { r: 1, c: 1 }, { r: 1, c: -1 }, { r: -1, c: 1 }, { r: -1, c: -1 }
+                ];
+                return kingMoves.map(d => ({ row: row + d.r, col: col + d.c }))
+                    .filter(move => move.row >= 0 && move.row < 8 && move.col >= 0 && move.col < 8);
+            }
+
+            function movePiece(row, col) {
+                const { row: fromRow, col: fromCol } = selectedPiece;
+                const piece = initialBoard[fromRow][fromCol];
+
+                if (validMoves.some(move => move.row === row && move.col === col)) {
+                    initialBoard[row][col] = piece;
+                    initialBoard[fromRow][fromCol] = '--';
+
+                    createBoard();  // Recreate the board
+                    selectedPiece = null;
+                    validMoves = [];
+                } else {
+                    selectedPiece = null;
+                    validMoves = [];
+                    createBoard();
+                }
+            }
+
+            createBoard(); // Initial board render
         });
     </script>
 </body>
